--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
+    "eslint": "^4.12.1",
+    "eslint-plugin-vue": "^4.0.0-beta.0",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
